# LTS_V2

./: .bettercodehub.yml  .gitignore  README.md  circuit_ploter.mlx  multi_circuit_ploter.mlx  scalability_plotter.mlx
Tests/LTSComparison/: BatchTest.raw  README.md  parse.cpp  parse2.cpp
Tests/inverting_opamp_simulation/: Draft1.asc  netlist.txt
Tests/performanceTests/: CSVTester.cpp  buildCSVTester.sh  runner.sh
main_project/: .~lock.out.csv#  buildMainGprof.sh  main.cpp  mainDebugging.cpp  testCircuit.sp
main_project/CustomExceptionClasses/: notSupportedByComponentException.hpp  (+1 more)
main_project/circuit/: circuit.cpp  (+1 more)
main_project/component/: CMakeLists.txt  bjt.cpp  bjt.hpp  capacitor.cpp  capacitor.hpp  component.cpp  component.hpp  controlledSource.cpp  controlledSource.hpp  currentControlledCurrentSource.cpp  currentControlledCurrentSource.hpp  currentControlledSource.cpp  currentControlledSource.hpp  currentControlledVoltageSource.cpp  currentControlledVoltageSource.hpp  currentSource.cpp  currentSource.hpp  diode.cpp  diode.hpp  enums.hpp  exampleInputDiode.cpp  exampleInputDiode.hpp  inductor.cpp  inductor.hpp  mosfet.cpp  mosfet.hpp  opamp.cpp  opamp.hpp  resistor.cpp  resistor.hpp  voltageControlledCurrentSource.cpp  voltageControlledCurrentSource.hpp  voltageControlledSource.cpp  voltageControlledSource.hpp  voltageControlledVoltageSource.cpp  voltageControlledVoltageSource.hpp  voltageSource.cpp  voltageSource.hpp  waveform.cpp  waveform.hpp
matlab_result_plotters/: multi_circuit_plotter.mlx
research/: insideSpice_notes.md  research_links.md
(+25 files in other folders)
