add_library(component
    component.cpp
    resistor.cpp
    capacitor.cpp
    inductor.cpp
    diode.cpp
    voltageSource.cpp
    currentSource.cpp
    waveform.cpp
    voltageControlledSource.cpp
    currentControlledSource.cpp
    voltageControlledVoltageSource.cpp
    currentControlledVoltageSource.cpp
    voltageControlledCurrentSource.cpp
    currentControlledCurrentSource.cpp
    mosfet.cpp
)