add_library(component
    component.cpp
    resistor.cpp
    capacitor.cpp
    inductor.cpp
    voltageSource.cpp
    currentSource.cpp
    waveform.cpp
    voltageControlledSource.cpp
    voltageControlledVoltageSource.cpp
    voltageControlledCurrentSource.cpp
    currentControlledSource.cpp
    currentControlledVoltageSource.cpp
    currentControlledCurrentSource.cpp
    exampleInputDiode.cpp
    diode.cpp
    bjt.cpp
)